# fullapp

./: pyproject.toml
.github/workflows/: deployment.yml
src/application/: data_model.py  main.py  routes.py
src/config/: appconfig.py  settings.py
src/services/: prediction_pipeline.py
tests/: test_predition_pipeline.py
